Remove deprecated usage of newInstance and some other methods.